--- a/index.css
+++ b/index.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,700');
 html, body {
   color: white;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: sans-serif,  Poppins;
+  font-weight: 300;
   background: linear-gradient(270deg, #172242, #20304D, #283D5A);
   background-size: 600% 600%;
 
@@ -67,9 +68,17 @@ html, body {
   width: 100%;
 }
 .jumbotron {
-  padding: 3px;
-  margin: 0;
+  padding: 5%;
+  background-color: rgb(0,0,0,0.3);
+  
 }
+.lead, .text {
+  text-align: center;
+}
+.card-title, .card-text {
+  color: #000;
+}
+
 .btn-primary{
   background-color: #000;
   border: 2px solid #ffffff;
