--- a/index.css
+++ b/index.css
@@ -35,12 +35,76 @@ html, body {
 .navbar {
   background-color: rgb(0,0,0,0.3);
 }
+/* DEMO-SPECIFIC STYLES */
+.typewriter h1 {
+  color: #fff;
+  font-family: monospace;
+  overflow: hidden; /* Ensures the content is not revealed until the animation */
+  border-right: .15em solid orange; /* The typwriter cursor */
+  white-space: nowrap; /* Keeps the content on a single line */
+  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+  letter-spacing: .15em; /* Adjust as needed */
+  animation: 
+    typing 3.5s steps(30, end),
+    blink-caret .5s step-end infinite;
+}
+@media (max-width: 575px) {
+  .typewriter h1, .typewriter h3 {
+    font-size: medium !important;
+  }
+  #welcome {
+    position: static !important;
+  }
+  i::before, i::after {
+    width: 1rem !important;
+  }
+}
+@media (max-width: 1200px) and (min-width: 575px) {
+  .typewriter h1, .typewriter h3 {
+    font-size: xx-large !important;
+  }
+  #welcome {
+    position: static !important;
+  }
+}
+/* The typing effect */
+@keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
+}
 
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+  from, to { border-color: transparent }
+  50% { border-color: orange }
+}
+#gif {
+  -webkit-filter: blur(5px);
+  filter: blur(5px);
+  height: 15rem;
+  width: 100%;
+}
+.gif-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+#main {
+  padding-top: 10rem;
+}
+#bubbles {
+  margin: 0 !important;
+  visibility: hidden; /*javascript will change this when the item becomes visible*/
+}
+#slides {
+  margin: 0 !important;
+}
 .speech-bubble {
 	position: relative;
 	background: #E9ECEF;
   border-radius: .4em;
-  padding: 15px;
+  padding: 5px;
   margin: 15px;
   width: 95%;
   color: #172242;
@@ -67,6 +131,9 @@ html, body {
 .img-fluid {
   width: 100%;
 }
+.carousel {
+  padding-top: 15px;
+}
 .jumbotron {
   padding: 5%;
   background-color: rgb(0,0,0,0.3);
@@ -74,11 +141,8 @@ html, body {
 }
 .lead, .text {
   text-align: center;
+  margin: 0;
 }
-.card-title, .card-text {
-  color: #000;
-}
-
 .btn-primary{
   background-color: #000;
   border: 2px solid #ffffff;
@@ -87,9 +151,41 @@ html, body {
   background-color: #424242;
   border: 2px solid #000;
 }
-.social a{
+#welcome {
+  margin-right: 0;
+  position: sticky;
+  top: 5rem;
+}
+#social-col {
+  margin: 0;
+  padding: 0;
+  position: fixed;
+  bottom: 0;
+  right: 1rem;
+  z-index: 10;
   font-size: 3rem;
+  padding: 0;
+}
+.card-row {
+  padding-top: 2rem;
+}
+.card-title {
+  color: black;
+  font-size: medium;
+}
+.card-body {
   padding: 1rem;
+  padding-bottom: 50px;
+}
+.card-footer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+}
+.card-text {
+  color: black;
+  font-size: small;
 }
 footer{
   background-color: black;
