--- a/index.css
+++ b/index.css
@@ -27,7 +27,7 @@ a, a:visited, a:hover, a:active {
 .two-cols {
   display: grid;
   grid-template-columns: auto auto;
-  padding: 3rem;
+  padding: 2rem;
 }
 
 .col-item {
@@ -44,6 +44,17 @@ a, a:visited, a:hover, a:active {
   width: fit-content;
 }
 .typewriter h1 {
+  overflow: hidden;
+  border-right: .4em solid white;
+  white-space: nowrap;
+  margin: 0 auto;
+  letter-spacing: .15em;
+  animation: 
+    typing 3.5s steps(30, end),
+    blink-caret .5s step-end infinite;
+}
+.typewriter h2 {
+  font-size: large;
   overflow: hidden;
   border-right: .4em solid white;
   white-space: nowrap;
